scanner with single. double characters, string literal, number implementation